<resources>
    <string name="app_name">MundoJuego</string>
    <string name="title">Join the numbers and get to the</string>
    <string name="_2048_title">2048 title!</string>
    <string name="help">Help</string>
    <string name="menu">Main Menu</string>
    <string name="menuScore">Score Menu</string>
    <string name="settings">Settings</string>
    <string name="game">Game Screen</string>
    <string name="scores">Scores Screen</string>
    <string name="app_logo_top">BEEN THERE</string>
    <string name="app_logo_bottom">DONE THAT!</string>
    <string name="app_version_info">Version 2.0.0</string>
    <string name="playGame1">Play 2048</string>
    <string name="playGame2">Play Peg Solitaire</string>
    <string name="viewScore">View Scores</string>
    <string name="gameScore1">2048</string>
    <string name="gameScore2">Peg Solitaire</string>
    <string name="Back">Back</string>

    <string name="_0">0</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_nombre">Nombre</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_apellido1">Primer Apellido</string>
    <string name="prompt_apellido2">Segundo Apellido</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


</resources>